# GPURent

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-025-09-14-01-17-41-58-cfc60822-User-INFO-main-Mounted-frontend-static-files-from-home-runner-work-1757794082419_1757794082421.txt  Pasted-Your-deployment-attempt-had-the-following-errors-Health-check-is-failing-because-the-root-endpoint--1757792363297_1757792363298.txt
backend/: auth.py  database.py  google_auth.py  main.py  models.py  redis_queue.py  requirements.txt  schemas.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/: DashboardPage.jsx  GPUMarketplace.jsx  GoogleCallbackPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx
